# MoMEMta

./: CMakeLists.txt
MatrixElements/SgTop/: CMakeLists.txt
MatrixElements/SgTop/SubProcesses/P1_Sigma_sm_no_b_mass_dbx_umumvmxbx/: P1_Sigma_sm_no_b_mass_dbx_umumvmxbx.cc  P1_Sigma_sm_no_b_mass_dbx_umumvmxbx.h
MatrixElements/SgTop/SubProcesses/P1_Sigma_sm_no_b_mass_dux_bmumvmxbx/: P1_Sigma_sm_no_b_mass_dux_bmumvmxbx.cc  P1_Sigma_sm_no_b_mass_dux_bmumvmxbx.h
MatrixElements/SgTop/SubProcesses/P1_Sigma_sm_no_b_mass_dux_bvtxtambx/: P1_Sigma_sm_no_b_mass_dux_bvtxtambx.cc  P1_Sigma_sm_no_b_mass_dux_bvtxtambx.h
MatrixElements/SgTop/SubProcesses/P1_Sigma_sm_no_b_mass_ub_dudxb/: P1_Sigma_sm_no_b_mass_ub_dudxb.cc  P1_Sigma_sm_no_b_mass_ub_dudxb.h
MatrixElements/SgTop/SubProcesses/P1_Sigma_sm_no_b_mass_ub_dveepb/: P1_Sigma_sm_no_b_mass_ub_dveepb.cc  P1_Sigma_sm_no_b_mass_ub_dveepb.h
MatrixElements/SgTop/SubProcesses/P1_Sigma_sm_no_b_mass_ub_dvttapb/: P1_Sigma_sm_no_b_mass_ub_dvttapb.cc  P1_Sigma_sm_no_b_mass_ub_dvttapb.h
MatrixElements/SgTop/include/: HelAmps_sm_no_b_mass.h  Parameters_sm_no_b_mass.h  SubProcess.h
MatrixElements/SgTop/src/: HelAmps_sm_no_b_mass.cc  Parameters_sm_no_b_mass.cc
MatrixElements/pp_WW_fully_leptonic/: CMakeLists.txt
cmake/modules/: FindLHAPDF.cmake
core/src/: MoMEMta.cc
examples/: VLQ_test.cc  VLQ_test.lua  WW_fullyleptonic.lua
modules/: BlockC.cc
tests/phaseSpaceVolume/: CMakeLists.txt  blockC.cc  blockC.lua
tests/unit_tests/: modules.cc
(+4 files in other folders)
